# traiings

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: install_torch.yaml  test.yaml
auth/: README.md  pyproject.toml
auth/src/basic/: README.md
frontend/: cheat_sheet.md
githubactions/: Makefile  pyproject.toml
githubactions/.github/workflows/: test.yaml
githubactions/memo/: workflow.md
shell/: README.md
shell/shebang/: README.md
shell/shebang/src/: with_shebang.sh  without_shebang.sh
